<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/ic_movie_24"
        android:iconTint="@color/purple_500"
        android:title="@string/movies" />

    <item
        android:id="@+id/tvShowFragment"
        android:icon="@drawable/ic_tv_24"
        android:iconTint="@color/purple_500"
        android:title="@string/tv_shows" />

    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite_filled"
        android:iconTint="@color/purple_500"
        android:title="@string/favorites" />

</menu>